traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:23: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:26: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:29: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:32: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:35: error: Unmatched closing brace '}' ignored here
}
^