traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag:Int = 0;
override def run() {
  var x:Int = 0
  var a:Int =0
  var b:Int =diag
   while (getMondeHauteur()-1 !=getY() || getMondeLargeur()-1 != getX()){
      while (b!=0){
        ecritMessage(x)
 x+=1
        setPos(a,b)
        a+=1
        b-=1
      }
      
    }
     
      
  
  ecritMessage(x)
}
}